syntax = "proto3";

package petstore;

service PetStore {

}