syntax = "proto3";

package user;

service User {
    rpc Create(UserRequest) returns (UserResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message UserRequest {
    int64 id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    bytes password = 6;
    string phone = 7;
    int64 userStatus = 8;
}

message UserResponse {
    // empty
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string success = 1;
}

message LogoutRequest {
    // empty
}

message LogoutResponse {
    // empty
}

message GetRequest {
    string username = 1;
}

message GetResponse {
    int64 id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    bytes password = 6;
    string phone = 7;
    int64 userStatus = 8;
}

message UpdateRequest {
    int64 id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    bytes password = 6;
    string phone = 7;
    int64 userStatus = 8;
}

message UpdateResponse {
    // empty
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    // empty
}